fixed skills container and svg spacings

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -277,9 +277,10 @@
     flex: 1;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
 
-    padding: 50px 0;
+    padding: 30px 0;
     margin: 30px 0;
     width: 100%;
     border-radius: 1rem;
@@ -290,11 +291,12 @@
     background: linear-gradient(160deg, rgba(62,77,112,1) 0%, rgba(12,19,29,0) 50%);
   
     & .svg-container {
-      height: 100px;
+      width: 80px;
+      overflow:hidden;
   
-      & img{
-        height: inherit;
+      & img {
         width: 100%;
+        object-fit: cover;
       }
     }
 }
